Fix HTML structure and update project links

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
   </div>
   <div class="project-links">
-    <a href="#" target="_blank">🌐 Website</a>
+    <a href="https://ilmandev.github.io/KepPropperty/" target="_blank">🌐 Website</a>
     <a href="https://github.com/ilmanDev" target="https://github.com/ilmanDev">💻 GitHub</a>
     <a href="#" target="_blank">📄 Detail Project</a>
 </div>
@@ -196,3 +196,4 @@
 </body>
 
 </html>
+
